--- a/01_libft/Makefile
+++ b/01_libft/Makefile
@@ -6,7 +6,7 @@
 #    By: pfu <spashleyfu@gmail.com>                 +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/08/04 17:05:04 by pfu               #+#    #+#              #
-#    Updated: 2019/08/13 23:55:11 by pfu              ###   ########.fr        #
+#    Updated: 2019/08/25 22:30:29 by pfu              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -49,32 +49,53 @@ SRC = \
 	  ft_memcpy.c \
 	  ft_memccpy.c \
 	  ft_memmove.c \
-	  ft_memchr.c
+	  ft_memchr.c \
+	  ft_memcmp.c \
+	  ft_strdup.c \
+	  ft_strcat.c \
+	  ft_strncat.c \
+	  ft_strlcat.c \
+	  ft_strchr.c \
+	  ft_strrchr.c \
+	  ft_strstr.c \
+	  ft_check_substr.c \
+	  ft_strnstr.c \
+	  ft_strcmp.c \
+	  ft_strncmp.c \
+	  ft_atoi.c \
+	  ft_valid_atoistr.c \
+	  ft_escape_valid_atoi.c \
+	  ft_isalpha.c \
+	  ft_isdigit.c \
+	  ft_isalnum.c \
+	  ft_isascii.c \
+	  ft_isprint.c \
+	  ft_toupper.c \
+	  ft_tolower.c \
+	  ft_lstnew.c \
+	  ft_lstdelone.c \
+	  ft_lstdel.c \
+	  ft_lstadd.c \
+	  ft_lstiter.c \
+	  ft_lstmap.c
 
 OBJ = $(SRC:.c=.o)
 
-.PHONY: all, clean, fclean, re
-
 all: $(NAME)
-	@echo "RNU: all"
 
 $(NAME): $(OBJ)
-	@echo "RUN: ar rc $(NAME) $(OBJ)"
 	@ar rc $(NAME) $(OBJ)
-	@echo "ranlib $(NAME)"
 	@ranlib $(NAME)
 
 %.o: %.c
-	@echo "%.o: %.c"
-	@echo "gcc $(FLAGES) -c $< -o $@"
 	@gcc $(FLAGES) -c $< -o $@
 
 clean:
 	@rm -f $(OBJ)
-	@echo "Delete OBJ"
 
 fclean: clean
-	@echo "RUN: fclean -> rm -f $(NAME)"
 	@rm -f $(NAME) 
 
 re: fclean all
+
+.PHONY: all, clean, fclean, re
